--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -5,42 +5,11 @@
             <h1>Profile</h1>
         </div>
     </div>
-    <!-- End -->
-
-    <!-- Sidenav -->
-    <div class="sidenav">
-        <div class="profile">
-            <img src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg" width="100" height="110">
-
-            <div class="name">
-                {{BusinessOwner.BusinessName}}
-            </div>
-            <div class="job">
-               {{BusinessOwner.OwnerEmail}}
-            </div>
-        </div>
-
-    </div>
-    <!-- End -->
 
     <!-- Main -->
-    <div class="main">
-        <h2>Details</h2>
-        <div class="card">
-            <div class="card-body">
-                <i class="fa fa-pen fa-xs edit"></i>
-                <ul>
-                    <li>
-                        Username: <span>{{BusinessOwner.BusinessName}}</span>
-                    </li>
-                    <br>
-                    <li>
-                        Email: <span>{{BusinessOwner.OwnerEmail}}</span>
-                    </li>
-                    <br>
-                </ul>
-            </div>
-        </div>
-    </div>
+    <h1>{{ BusinessOwner.BusinessName }}</h1>
+    <p>Owner: {{ BusinessOwner.OwnerFirstName }} {{ BusinessOwner.OwnerLastName }}</p>
+    <p>Email: {{ BusinessOwner.OwnerEmail }}</p>
+    <p>Phone: {{ BusinessOwner.OwnerPhone }}</p>
     <!-- End -->
 </body>
