--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div>
   <ul>
     <li *ngIf="auth.loggedIn()">
-       <a href="" routerLink="/dashboard" [routerLinkActive]="['active']"  [routerLinkActiveOptions]="{exact:true}">dashboard</a>
+       <a href="" routerLink="/AppointmentsTimetable" [routerLinkActive]="['active']"  [routerLinkActiveOptions]="{exact:true}">Timetable</a>
       </li>
         <li *ngIf="auth.loggedIn()">
           <a href="" routerLink="/Profile"[routerLinkActive]="['active']"  [routerLinkActiveOptions]="{exact:true}"  >Profile</a>
