Busy migrating logic

--- a/src/app/appointments-timetable/appointments-timetable.component.html
+++ b/src/app/appointments-timetable/appointments-timetable.component.html
@@ -1,1 +1,47 @@
-<p>appointments-timetable works!</p>
+<div class="Whole-Table"><h1 [style]="HeadingWidthStyle">BookingsTimetable</h1> 
+     <div class="Timetable-Settings">
+          <a (onclick)="NavigateTable(false)"><div class="Timetable-Nav">{{ NavigateBacktext }}</div></a>
+          <a (onclick)="NavigateTable(true)"><div class="Timetable-Nav">{{ NavigateForwardtext }}</div></a>
+          <a (onclick)="SwitchView">Switch View</a>
+          <input type="checkbox" disabled=true [checked]="ShowDaliyOnly"> 
+     </div>
+        <div *ngIf="AppointmentsLoaded">
+               <div class="Table-Content">
+                    <div [style]="HeaderWidthStyle" class="Weekdays">
+                         <span>Available</span><br>
+                         <span>Times</span>
+                    </div>
+                        <div *ngIf="ShowDaliyOnly">
+                            <div class="TimeTable-Day">
+                                <div [style]="HeaderWidthStyle" class="Weekdays">
+                                     <span>{{ CurrentWeekDates[DayViewIndex] | date: 'dddd' }}</span><br/>
+                                     <span>{{ CurrentWeekDates[DayViewIndex]| date: 'd MMMM' }}</span>
+                                </div>
+                                <app-timeslots-for-day 
+                                    [WeekDays]="WeekDays" 
+                                    [CurrentWeekIndex]="i">
+                                </app-timeslots-for-day>    
+                            </div> 
+                        </div>
+                        <div  *ngIf="!ShowDaliyOnly">
+                            <div *ngFor="let day of WeekDaysToShow; let i = index">
+                                <div class="TimeTable-Day">
+                                    <div [style]="HeaderWidthStyle" class="Weekdays">
+                                        <span>{{ CurrentWeekDates[i] | date: 'dddd' }}</span><br/>
+                                        <span>{{ CurrentWeekDates[i]| date: 'd MMMM' }}</span>
+                                    </div>
+                                    <app-timeslots-for-day 
+                                        [WeekDays]="WeekDays" 
+                                        [CurrentWeekIndex]="i">
+                                    </app-timeslots-for-day>
+                                </div>
+                            </div>                            
+                        </div>
+               </div>
+               <div class="TimeTable-Times">
+                    <div *ngFor="let slot of Timeslots; i=index" class="Timeslot-Hour" [style]="TimeslotWidthStyle">
+                         <span [style]="TimeslotSeperatorStyle">{{ StartOfWorkday.AddHours(i) | date: 'HH:mm'  }}</span><br/>
+                    </div>
+               </div>
+        </div>
+</div>
