More progress on migration

--- a/src/app/timeslots-for-day/timeslots-for-day.component.html
+++ b/src/app/timeslots-for-day/timeslots-for-day.component.html
@@ -1,18 +1,17 @@
-@foreach (T)
-
-    <div *ngFor="let slot in Timeslots">
+<div *ngFor="let slot in Timeslots">
         <div *ngIf="slot.isBLank">
             <a (onclick)="BookAppointment(slot)">
                 <div  [style]="slot.StylingSlotHeight" class="Appointment-blank">
                     <span>Open</span>
                 </div>
-        </a>
+            </a>
         </div>
         <div *ngIf="!slot.isBLank">
-            <a @onclick="EditAppointment(slot)">
+            <a (onclick)="EditAppointment(slot)">
                 <div pstyle]="slot.StylingSlotHeight" class="Appointment-filled">
                     <span>{{ slot.CurrentAppointment.AppointmentName }}</span>
                 </div>
             </a>
         </div>
+</div>
 
