--- a/src/app/appointment-info/appointment-info.component.html
+++ b/src/app/appointment-info/appointment-info.component.html
@@ -1,1 +1,29 @@
-<p>appointment-info works!</p>
+<div>
+    <h1>{{ AppointmentInfo.AppointmentName }} Appointment for {{ AppointmentInfo.ClientFirstName }} {{ AppointmentInfo.ClientLastName }}</h1>
+    <span>Appointment duration: {{ AppointmentInfo.AppointmentDurationInMinutes }}</span>
+    <span>Current appointment time: {{ AppointmentInfo.AppointmentTime }}</span>
+    <span>Current appointment date: {{ AppointmentInfo.AppointmentDate }}</span>
+</div>
+<div>
+    <span>You can the edit following fields </span>
+    <form [formGroup]="Loginform"  style="border:1px solid #ccc">
+        <div>      
+            <label> Appointment Date</label>
+            <input class="InputField" min="EarliestDate" type="date" name="date" formControlName="AppointmentDate" required>
+              <label> Appointment Time </label>
+            <input class="InputField" type="time" name="time" formControlName="AppointmentTime" required min="TimeSlotForAppointment.StartTime" max="LatestBookingTime">
+            <label> Appointment
+                <select (change)="SetAppointmentType($event)">
+                    <option >-- Select --</option>
+                    <option *ngFor="let a of availableAppointments.List" value="a.AppointmentName">a.AppointmentName</option>
+                </select>
+            </label>    
+        </div>
+        <div class="clearfix">
+            <button type="button" class="cancelbtn" routerLink="/AppointmentsTimetable">Cancel</button>
+            <button class="signupbtn" (click)="SaveChanges()">Save</button>
+        </div>
+    </form>
+  
+    </form>
+</div>
