finished appointment booking page

--- a/src/app/appointment-info/appointment-info.component.html
+++ b/src/app/appointment-info/appointment-info.component.html
@@ -6,7 +6,7 @@
 </div>
 <div>
     <span>You can the edit following fields </span>
-    <form [formGroup]="Loginform"  style="border:1px solid #ccc">
+    <form [formGroup]="Editingform"  style="border:1px solid #ccc">
         <div>      
             <label> Appointment Date</label>
             <input class="InputField" min="EarliestDate" type="date" name="date" formControlName="AppointmentDate" required>
