--- a/src/app/appointment-form/appointment-form.component.html
+++ b/src/app/appointment-form/appointment-form.component.html
@@ -2,16 +2,16 @@
     <span>You can the edit following fields </span>
     <form [formGroup]="Bookingform"  style="border:1px solid #ccc">
         <div>      
-            <label> Appointment Date</label>
-            <input class="InputField" min="EarliestDate" type="date" name="date" formControlName="AppointmentDate" required>
-              <label> Appointment Time </label>
-            <input class="InputField" type="time" name="time" formControlName="AppointmentTime" required min="TimeSlotForAppointment.StartTime" max="LatestBookingTime">
-            <label> Appointment
-                <select (change)="SetAppointmentType($event)">
-                    <option >-- Select --</option>
-                    <option *ngFor="let a of AppointmentTypeList" value="a.AppointmentName">a.AppointmentName</option>
-                </select>
-            </label> 
+          <label> Appointment Date</label>
+          <input class="InputField" [min]="EarliestDate" type="date" name="date" formControlName="AppointmentDate" required>
+            <label> Appointment Time </label>
+          <input class="InputField" type="time" name="time" formControlName="AppointmentTime" required [min]="BlankSlotForBooking.StartTime" [max]="LatestBookingTime">
+          <label> Appointment
+              <select (change)="SetAppointmentType($event)">
+                  <option >-- Select --</option>
+                  <option *ngFor="let a of apmnt.AvailableAppointments" [value]="a.AppointmentName">{{ a.AppointmentName }}</option>
+              </select>
+          </label>    
         <!--email-->
       <div>
         <label class="labels" for="email"><b>Businnes Email  </b></label>
