--- a/src/app/appointment-info/appointment-info.component.html
+++ b/src/app/appointment-info/appointment-info.component.html
@@ -9,19 +9,19 @@
     <form [formGroup]="Editingform"  style="border:1px solid #ccc">
         <div>      
             <label> Appointment Date</label>
-            <input class="InputField" min="EarliestDate" type="date" name="date" formControlName="AppointmentDate" required>
+            <input class="InputField" [min]="EarliestDate" type="date" name="date" formControlName="AppointmentDate" required>
               <label> Appointment Time </label>
-            <input class="InputField" type="time" name="time" formControlName="AppointmentTime" required min="TimeSlotForAppointment.StartTime" max="LatestBookingTime">
+            <input class="InputField" type="time" name="time" formControlName="AppointmentTime" required [min]="TimeslotForEditing.StartTime" [max]="LatestBookingTime">
             <label> Appointment
                 <select (change)="SetAppointmentType($event)">
                     <option >-- Select --</option>
-                    <option *ngFor="let a of AppointmentTypeList" value="a.AppointmentName">a.AppointmentName</option>
+                    <option *ngFor="let a of apmnt.AvailableAppointments" [value]="a.AppointmentName">{{ a.AppointmentName }}</option>
                 </select>
             </label>    
         </div>
         <div class="clearfix">
             <button type="button" class="cancelbtn" routerLink="/AppointmentsTimetable">Cancel</button>
-            <button class="signupbtn" (click)="SaveChanges()">Save</button>
+            <button class="signupbtn" [disabled]="!ValidAppointment" (click)="SaveChanges()">Save</button>
         </div>
     </form>
 
