--- a/src/app/appointments-timetable/appointments-timetable.component.html
+++ b/src/app/appointments-timetable/appointments-timetable.component.html
@@ -1,9 +1,8 @@
 <div class="Whole-Table"><h1 [style]="HeadingWidthStyle">BookingsTimetable</h1> 
-     <div class="Timetable-Settings">
+     <div class="Timetable-Settings" [style]="HeadingWidthStyle">
           <a (click)="NavigateTable(false)"><div class="Timetable-Nav">{{ NavigateBacktext }}</div></a>
           <a (click)="NavigateTable(true)"><div class="Timetable-Nav">{{ NavigateForwardtext }}</div></a>
           <a (click)="SwitchView()"><div class="Timetable-Nav">Switch View</div></a>
-          <input type="checkbox" disabled=true [checked]="ShowDaliyOnly"> 
      </div>
         <div *ngIf="AppointmentsLoaded">
                <div class="Table-Content">
